--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,6 +55,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>taotao-sso</servlet-name>
-		<url-pattern>/sso/*</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 </web-app>
