--- a/src/main/resources/resource/project.properties
+++ b/src/main/resources/resource/project.properties
@@ -1,7 +1,8 @@
-MAX_CAT_ITEM_COUNTER=14
-INDEX_CONTENT_REDIS_KEY=INDEX_CONTENT_REDIS_KEY
-INDEX_CATEGORY_REDIS_KEY=INDEX_CATEGORY_REDIS_KEY
-#商品信息
-REDIS_ITEM_KEY=REDIS_ITEM_KEY
-#过期时间,默认为1天
-REDIS_ITEM_EXPIRE=86400
+#用户session在redis中保存的key
+REDIS_USER_SESSION_KEY=REDIS_USER_SESSION_KEY
+ 
+#Session的过期时间,30分钟
+SSO_SESSION_EXPIRE=1800
+
+#管理员session
+REDIS_USER_ADMIN_SESSION_KEY=REDIS_USER_ADMIN_SESSION_KEY
